--- a/css/master.css
+++ b/css/master.css
@@ -109,7 +109,7 @@ header {
   font-size: 8vmin;
   text-align: center;
   letter-spacing: 3.2vmin;
-  background: rgba(0, 0, 0, 0.7); }
+  background: rgba(1, 0, 0, 0.3); }
   .name figcaption {
     font-size: 3vmin;
     letter-spacing: 1vmin; }
@@ -296,14 +296,29 @@ header {
   min-height: 70vh;
   margin-left: 20vh;
   padding: 20px;
-  background: #3b5999; }
-  .design h1 {
-    text-align: center;
-    margin: 0 auto;
-    font-size: 10vmin;
-    color: white;
-    font-family: 'Raleway';
-    letter-spacing: 2vmin; }
+  width: 100%;
+  text-align: center;
+  background: rgba(29, 34, 71, 0.9); }
+  .design div {
+    width: 80%;
+    margin: 0px 5% 0px 5%; }
+    .design div h1 {
+      font-size: 10vmin;
+      margin: 0 auto;
+      color: white;
+      font-family: 'Raleway';
+      letter-spacing: 2vmin;
+      margin-bottom: 2vh; }
+    .design div img {
+      width: 20%; }
+    .design div figcaption a {
+      font-size: 3vmin;
+      text-decoration: none;
+      background: white;
+      padding: 10px;
+      font-family: 'Raleway';
+      border-radius: 2%;
+      box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.4); }
 
 .contact-name {
   display: flex;
