--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
 body, html {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  overflow-x: hidden; }
 
 .navbar {
   padding: 20px;
@@ -91,5 +92,8 @@ body, html {
   .design a:hover {
     background: black;
     color: white; }
+
+.jumbotron {
+  width: 100%; }
 
 /*# sourceMappingURL=master.css.map */
