--- a/css/master.scss
+++ b/css/master.scss
@@ -1,6 +1,7 @@
 body,html{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .navbar{
@@ -113,5 +114,8 @@ box-shadow: 0 5000px rgba(0,0,0,0.5) inset;
     background: black;
     color: white;
   }
+}
 
+.jumbotron{
+  width: 100%;
 }
