--- a/css/master.scss
+++ b/css/master.scss
@@ -2,13 +2,23 @@ body,html{
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+
 }
 
 .navbar{
-  padding: 20px;
+  padding: 10px;
   background: white;
   box-shadow: 0px 5px 5px rgba(0,0,0,0.5);
   font-family: 'Raleway', sans-serif;
+  margin:0;
+
+  button{
+
+    box-shadow: 0 1000px black inset;
+    border-radius: 2px;
+
+  }
+
 
   .navbar-brand{
     border: 2px solid black;
@@ -26,23 +36,26 @@ body,html{
     }
   }
 
+
 }
 
 .heads{
-  margin-top:3%;
-  padding: 210px;
+
   background: url('https://static.pexels.com/photos/29608/pexels-photo-29608-large.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 0 1000px rgba(0,0,0,0.5) inset;
-  margin-bottom: 0px;
+  margin: 0px;
+  height: 400px;
+  padding: 20px;
 
   h1{
     color: white;
     border: 2px solid white;
-    border-radius: 1%;
-    padding: 5%;
+    border-radius: 5px;
+    letter-spacing: 10px;
+    padding: 50px;
   }
 }
 
